# FDFS-api

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml  mcp-release.yml  release.yml
app/: __init__.py  main.py
app/core/: __init__.py  config.py  security.py
app/routes/: __init__.py  movies.py  regions.py  search.py  theaters.py
app/services/: __init__.py  cache.py  http_client.py  scraper.py
deploy/: Dockerfile  README.md  docker-compose.yml
docs/: API.md  MCP.md
fdfs_mcp/: __init__.py
mcp/: __init__.py  mcp_server.py
