[project]
name = "fdfs-api"
version = "1.0.0"
description = "FDFS - First Day First Show: High-performance movie booking API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]
keywords = ["fdfs", "first-day-first-show", "movies", "theaters", "fastapi", "bookmyshow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "curl-cffi>=0.6.0",
    "redis>=5.0.0",
    "orjson>=3.9.0",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = ["pytest", "black", "flake8"]

[project.urls]
Homepage = "https://github.com/yourusername/FDFS-API"
Documentation = "https://github.com/yourusername/FDFS-API/tree/main/docs"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "mcp*"]
